--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "web-server-lite",
+  "name": "light-express-server",
   "version": "0.0.0",
   "scripts": {
-    "dev": "npmize dev",
-    "build": "npmize build"
+    "dev": "tsc --watch",
+    "build": "tsc",
+    "lab": "run ./src/__lab__/index.ts"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "dependencies": {
+    "express": "^4.21.0",
+    "noarg": "^3.1.6"
+  },
   "devDependencies": {
-    "ts-node": "^10.9.2",
+    "@types/node": "^22.7.4",
     "typescript": "^5.6.2"
-  }
+  },
+  "type": "commonjs",
+  "bin": "./dist/index.js"
 }
